# fpsample-haskell

./: CHANGELOG.md  README.md  fpsample-haskell.cabal
app/: Main.hs
src/FpsampleHaskell/: App.hs  Data.hs  Monad.hs
test/: Test.hs
