cabal-version:      2.4
name:               fpsample-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             tana-gh
maintainer:         yozoranotakaku@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        FpsampleHaskell.App
        FpsampleHaskell.Data
        FpsampleHaskell.Monad

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable fpsample-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        fpsample-haskell,
        aeson,
        http-conduit,
        mtl,
        optparse-applicative

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite fpsample-haskell-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Test.hs
    build-depends:
        base ^>=4.14.1.0,
        fpsample-haskell,
        hspec,
        mtl
